feat: get definition
